...
        mainAxisSize: MainAxisSize.min,
        children: [
          Row(
            mainAxisSize: MainAxisSize.min,
            children: [
              _btn('复制', Icons.copy, SelectionAction.copy),
              _btn('高亮', Icons.border_color, SelectionAction.highlight,
                  onTap: _onHighlightTap),
              _btn('划线', Icons.format_underlined, SelectionAction.underline),
              _btn('批注', Icons.edit_note, SelectionAction.note),
              _btn('翻译', Icons.translate, SelectionAction.translate),
              _btn('查词', Icons.abc, SelectionAction.lookup),
            ],
...
